For more informations please visit https://www.beebeep.net


BeeBEEP 5.6.9 (in development)
- Added "Quote selected text" option to context menu (right click) of the chat
- Added "CheckUserConnectedFromDatagramIp" option in beebeep.rc (to prevent multiple connections from the same user but different ip addresses)
- Added "Clear system messages" in activity and chat windows

BeeBEEP 5.6.8
- "ChatSaveFileTransfers" and "ChatSaveSystemMessages" options added in Settings - Chat menu: 
  if enabled history saves also these messages
- Disabled High DPI icons in windows (can be enabled with qt.conf file)
- Added new option in Settings - Chat - "Save maximum lines in chat": 
  you can choose how many lines to save for every chat
- Added "Clear cache items after X days" option: default is 96 days
- Added new option in Settings - Chat - "Show only # messages" to avoid performance issue
- Added "Always download files into the folder with the user's name" option in menu Settings - File Transfer
- The names of users and chats that contain the characters < > will now be correctly displayed (do not abuse)
- Improved search for predefined folders in Unix environment
- First release of a debian package for amd64 systems (beta)
- Compiled with large file support in Linux
- Reorganization of the "Settings" menu:
  - "Sound", "System tray" and "on new message event" options are now grouped into the menu Settings - Notifications
  - "Workgroups" -> "Your workgroups" in "Network" menu
  - "Set your status to away automatically" is now in "User status" menu in the toolbar
  - added new Menu "Interface"
- Added "Show users in their workgroups" option in user list settings
- Added "Time left" column in File Transfer window
- Added "Add up to # files to the transfer queue" option in Settings - File Transfer menu

BeeBEEP 5.6.4
- For security reasons the beebeep.off file (saved unsent messages) are now linked to the beebeep.ini file 