@@ -50,7 +50,7 @@ const char HUNSPELL_VERSION[] = "1.7.0";
 const char BEEBEEP_VERSION[] = "5.6.9";
 const int BEEBEEP_PROTO_VERSION = 77;
 const int BEEBEEP_SETTINGS_VERSION = 12;
-const int BEEBEEP_BUILD = 1235;
+const int BEEBEEP_BUILD = 1237;
 
 #endif // BEEBEEP_VERSION_H
 
