@@ -6,6 +6,8 @@ BeeBEEP 5.6.9 (in development)
 - Added "Quote selected text" option to context menu (right click) of the chat
 - Added "CheckUserConnectedFromDatagramIp" option in beebeep.rc (to prevent multiple connections from the same user but different ip addresses)
 - Added "Clear system messages" in activity and chat windows
+- Added "SkipLocalHardwareAddresses" in beebeep.rc to skip unesuful network interfaces
+- The option "AllowMultipleInstances" can be enabled also in Terminal Server because it checks also user account
 
 BeeBEEP 5.6.8
 - "ChatSaveFileTransfers" and "ChatSaveSystemMessages" options added in Settings - Chat menu: 
